@@ -41,17 +41,19 @@ typedef unsigned long long int uintmax_t;
 #endif
 
 static const char dd_usage[] =
-	"dd [if=name] [of=name] [bs=n] [count=n] [skip=n] [seek=n]\n\n"
-	"Copy a file, converting and formatting according to options\n\n"
+	"dd [if=FILE] [of=FILE] [bs=N] [count=N] [skip=N] [seek=N]\n"
+#ifndef BB_FEATURE_TRIVIAL_HELP
+	"\nCopy a file, converting and formatting according to options\n\n"
 	"\tif=FILE\tread from FILE instead of stdin\n"
 	"\tof=FILE\twrite to FILE instead of stdout\n"
-	"\tbs=n\tread and write n bytes at a time\n"
-	"\tcount=n\tcopy only n input blocks\n"
-	"\tskip=n\tskip n input blocks\n"
-	"\tseek=n\tskip n output blocks\n"
-
+	"\tbs=N\tread and write N bytes at a time\n"
+	"\tcount=N\tcopy only N input blocks\n"
+	"\tskip=N\tskip N input blocks\n"
+	"\tseek=N\tskip N output blocks\n"
 	"\n"
-	"Numbers may be suffixed by w (x2), k (x1024), b (x512), or M (x1024^2)\n";
+	"Numbers may be suffixed by w (x2), k (x1024), b (x512), or M (x1024^2)\n"
+#endif
+	;
 
 
 
