@@ -36,12 +36,15 @@
 typedef void (Display) (long, char *);
 
 static const char du_usage[] =
-	"du [OPTION]... [FILE]...\n\n"
-	"Summarize disk space used for each FILE and/or directory.\n"
+	"du [OPTION]... [FILE]...\n"
+#ifndef BB_FEATURE_TRIVIAL_HELP
+	"\nSummarizes disk space used for each FILE and/or directory.\n"
 	"Disk space is printed in units of 1024 bytes.\n\n"
 	"Options:\n"
 	"\t-l\tcount sizes many times if hard linked\n"
-	"\t-s\tdisplay only a total for each argument\n";
+	"\t-s\tdisplay only a total for each argument\n"
+#endif
+	;
 
 static int du_depth = 0;
 static int count_hardlinks = 0;
@@ -181,7 +184,7 @@ int du_main(int argc, char **argv)
 	exit(0);
 }
 
-/* $Id: du.c,v 1.18 2000/04/28 00:18:56 erik Exp $ */
+/* $Id: du.c,v 1.19 2000/05/10 05:05:45 erik Exp $ */
 /*
 Local Variables:
 c-file-style: "linux"
